<resources>
    <string name="app_name">Expense Guide</string>
    <string name="action_settings">Settings</string>

    <string name="url">http://expertmrp.techiesidentity.com</string>
    <string name="email_phone">Email/Phone</string>
    <string name="creating_account">Creating Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="register_now">Register Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="logging_user">Logging User</string>

    <string name="no_internet">Internet connection is not available.</string>
    <string name="connection_error">There is some problem in connecting server.</string>
    <string name="json_parser_error">Json parsing errror.</string>

    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="conf_password">Confirm Password</string>
    <string name="term_condition">By clicking on start you agree with Terms &amp; Conditions</string>

    <string name="full_name_required">Please enter full name.</string>
    <string name="email_required">Please enter Email Id.</string>
    <string name="password_required">Please enter Password.</string>
    <string name="password_not_match">Password is not matching.</string>
    <string name="valid_email">Please enter valid Email ID.</string>


    <string name="search">Search</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string-array name="menu_heading">
        <item>Home</item>
        <item>Sign Out</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_register">Register</string>
    <string name="title_activity_expense_list">Expenses</string>
    <string name="title_activity_create_expense">Create Expense</string>
    <string name="title_activity_backup_data">Backup Data</string>
    <string name="title_activity_create_income">Create Income</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_easy_planner">Easy Planner</string>
    <string name="title_activity_income_list">Incomes</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_setting">Settings</string>
</resources>
