<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login"
    tools:context="com.homeguide.activities.LoginActivity">

    <EditText
        android:id="@+id/edit_email_phone"
        android:hint="@string/email_phone"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:theme="@style/MySelectViewTheme"
        android:layout_marginTop="@dimen/login_container_vertical_margin"
        android:paddingBottom="@dimen/edit_text_vertical_padding"
        android:paddingTop="@dimen/edit_text_vertical_padding"
        android:paddingLeft="@dimen/edit_text_horizontal_padding"
        android:paddingRight="@dimen/edit_text_horizontal_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_password"
        android:hint="@string/password"
        android:layout_below="@+id/edit_email_phone"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawableTint="@color/colorPrimary"
        android:drawablePadding="@dimen/drawable_padding"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:theme="@style/MySelectViewTheme"
        android:paddingBottom="@dimen/edit_text_vertical_padding"
        android:paddingTop="@dimen/edit_text_vertical_padding"
        android:paddingLeft="@dimen/edit_text_horizontal_padding"
        android:paddingRight="@dimen/edit_text_horizontal_padding"
        android:layout_marginTop="@dimen/edit_password_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/edit_password"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_marginTop="@dimen/btn_login_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_forgot_password"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/text_forgot_password_margin_top"
        android:text="@string/forgot_your_password"
        android:gravity="center"
        android:textSize="@dimen/login_page_text_size"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/text_dont_have_account_label"
        android:text="@string/dont_have_account"
        android:layout_above="@+id/btn_register"
        android:gravity="center"
        android:textSize="@dimen/login_page_text_size"
        android:textColor="@color/grey700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register_now"
        android:textColor="@color/white"
        android:background="@color/grey500"
        android:layout_marginTop="@dimen/btn_register_margin_top"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
